# imessage-extractor

./: .gitignore  README.md  TODO_CODE_QUALITY.md  pyproject.toml  test.csv
.github/workflows/: publish.yml  test.yml
imessage_extractor/: __init__.py  cli.py  commands.py  constants.py  database.py  error_handlers.py  exceptions.py  html_exporter.py  parsers.py  ui.py  validators.py
imessage_extractor/styles/: chat.css
imessage_extractor/templates/: chat_template.html
tests/: conftest.py  test_attributed_body.py  test_exports.py  test_imessage_extractor.py  test_parsers.py  test_validators.py
