[project]
name = "imessage-extractor"
version = "0.3"
description = "Parse and Extract iMessage Conversations"
readme = "README.md"
authors = [{name = "Scott Macdonald"}]
license = "Apache-2.0"
requires-python = ">=3.9"
classifiers = []
dependencies = [
    "click",
    "pytypedstream",
    "jinja2",
    "piexif",
    "Pillow"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/scotm/imessage-extractor"
Changelog = "https://github.com/scotm/imessage-extractor/releases"
Issues = "https://github.com/scotm/imessage-extractor/issues"
CI = "https://github.com/scotm/imessage-extractor/actions"

[project.scripts]
imessage-extractor = "imessage_extractor.cli:cli"

[project.optional-dependencies]
test = ["pytest"]
